fix: release advanced ads pro update

--- a/plugins/advertising/admob/enumerations.html
+++ b/plugins/advertising/admob/enumerations.html
@@ -463,6 +463,54 @@
                         </tbody>
                     </table>
                 </div>
+
+                <div class="container"
+                    style="margin-left: 0px; padding-left: 0px; margin-bottom: 5px; margin-top: 40px; margin-right: 20px; border-top-left-radius: 20px;">
+                    <h1 class="list-group-item">EFormErrorCode</h1>
+                </div>
+                <div class="container" style="margin-left: 0px; padding-top: 5px; padding-left: 0px; overflow-x: auto; border-bottom-left-radius: 20px;">
+                    <table class="table table-striped table-bordered table-documentation"
+                        style="margin-bottom: 0; box-shadow: 1px 1px 3px #ccc;">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th>Name</th>
+                                <th>Description</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>UNKNOWN_ERROR</td>
+                                <td>
+                                    When the error is unkown.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>INTERNAL_ERROR</td>
+                                <td>
+                                    When an internal error has occurred within Admob.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>INTERNET_ERROR</td>
+                                <td>
+                                    When there was an error loading data from the network.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>INVALID_OPERATION</td>
+                                <td>
+                                    When an Invalid operation has occurred.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>TIME_OUT</td>
+                                <td>
+                                    When the operation has timed out.
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
                 
                 <div style="margin-bottom: 500px">
                 </div>
