--- a/plugins/advertising/admob/privacy_settings.html
+++ b/plugins/advertising/admob/privacy_settings.html
@@ -245,13 +245,45 @@
                 <div style="padding-top: 20px">
                     <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
                         <span class="badge badge-primary">2</span>
-                        <div class="info" style="border-bottom-left-radius: 20px;">
+                        <div class="info">
                             <p class="content">
                                 <b>Under Age of Consent</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
                                 Whether you would like your app to be marked to receive treatment for users in the European Economic Area (EEA) under the age of consent.</br>
                                 <span style="font-weight: 500">Note:</span> If you have marked your user as under the age of consent, they will <span style="font-weight: 500">NOT</span> receive the consent pop-up.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div style="padding-top: 20px">
+                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
+                        <span class="badge badge-primary">3</span>
+                        <div class="info">
+                            <p class="content">
+                                <b>On Consent Error</b>
+                            </p>
+                            <p class="content">
+                                An <a href="enumerations.html">Form Error Code</a> along with a message describing the consent failure.
+                            </p>
+                            <p class="content" style="margin-bottom: 0rem;">
+                                You can simply click and drag off this pin to create a custom event.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div style="padding-top: 20px">
+                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
+                        <span class="badge badge-primary">4</span>
+                        <div class="info" style="border-bottom-left-radius: 20px;">
+                            <p class="content">
+                                <b>On Initialised</b>
+                            </p>
+                            <p class="content">
+                                A parameterless delegate which will be called once Admob has succesfully initialised.
+                            </p>
+                            <p class="content" style="margin-bottom: 0rem;">
+                                You can simply click and drag off this pin to create a custom event.
                             </p>
                         </div>
                     </div>
