--- a/plugins/release/notes/play_base_services.html
+++ b/plugins/release/notes/play_base_services.html
@@ -120,6 +120,38 @@
                                         <img class="news-badge" src="../../../images/PlayBaseServices/GooglePlay_BaseServices_Plugin_Logo.png">
                                     </div>
                                     <div class="col-9" style="padding-left: 10px">
+                                        <div class="news-title">Feature Release</div>
+                                        <div class="news-sub-title">2024-03-18</div>
+                                    </div>
+                                    <div class="col text-right" style="padding-left: 10px">
+                                        <div class="news-title">v1.1.0</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="news-info">
+                                <div class="row">
+                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
+                                        <div class="news-info-details" style="font-weight: 500">
+                                            <ul>
+                                                <li>New blueprint node to <a href="../../google-play-services/base-services/leaderboards.html">Submit Leaderboard Score Immediatly</a></li>
+                                                <li>Get Feedback on Leaderboard Score Submission</li>
+                                                <li>Alternative has two additional parameters; OnSuccess and OnFailure delegates</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="padding: 10px"></div>
+                    <div class="news-card expanded">
+                        <div class="news-container">
+                            <div class="news-group-item">
+                                <div class="row">
+                                    <div class="col-auto" style="padding-right: 0">
+                                        <img class="news-badge" src="../../../images/PlayBaseServices/GooglePlay_BaseServices_Plugin_Logo.png">
+                                    </div>
+                                    <div class="col-9" style="padding-left: 10px">
                                         <div class="news-title">Initial Release</div>
                                         <div class="news-sub-title">2024-02-02</div>
                                     </div>
