--- a/plugins/release/notes/advanced_ads_pro.html
+++ b/plugins/release/notes/advanced_ads_pro.html
@@ -121,6 +121,39 @@
                                     </div>
                                     <div class="col-9" style="padding-left: 10px">
                                         <div class="news-title">Stability Release</div>
+                                        <div class="news-sub-title">2024-04-25</div>
+                                    </div>
+                                    <div class="col text-right" style="padding-left: 10px">
+                                        <div class="news-title">v1.0.2</div>
+                                    </div>
+                                </div>
+                            </div>
+                    
+                            <div class="news-info">
+                                <div class="row">
+                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
+                                        <div class="news-info-details" style="font-weight: 500">
+                                            <ul>
+                                                <li>Removed Small Padding Around Banner Ads</li>
+                                                <li>Anchored Adapative Banner Size Fix</li>
+                                                <li>Full Width Adaptive Banners in Portrait</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="padding: 10px"></div>
+                    <div class="news-card expanded">
+                        <div class="news-container">
+                            <div class="news-group-item">
+                                <div class="row">
+                                    <div class="col-auto" style="padding-right: 0">
+                                        <img class="news-badge" src="../../../images/Admob/Admob_Plugin_Logo.png">
+                                    </div>
+                                    <div class="col-9" style="padding-left: 10px">
+                                        <div class="news-title">Stability Release</div>
                                         <div class="news-sub-title">2024-02-23</div>
                                     </div>
                                     <div class="col text-right" style="padding-left: 10px">
@@ -205,7 +238,7 @@
                 </div>
                 
             </main>
-            <div style="margin-bottom: 700px">
+            <div style="margin-bottom: 800px">
             </div>
         </div>
     </div>
