--- a/plugins/release/notes/android_sensors.html
+++ b/plugins/release/notes/android_sensors.html
@@ -120,6 +120,39 @@
                                         <img class="news-badge" src="../../../images/AndroidSensors/Android_Sensors_Plugin_Logo.png">
                                     </div>
                                     <div class="col-9" style="padding-left: 10px">
+                                        <div class="news-title">Feature Release</div>
+                                        <div class="news-sub-title">2024-04-26</div>
+                                    </div>
+                                    <div class="col text-right" style="padding-left: 10px">
+                                        <div class="news-title">v1.1.0</div>
+                                    </div>
+                                </div>
+                            </div>
+                    
+                            <div class="news-info">
+                                <div class="row">
+                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
+                                        <div class="news-info-details" style="font-weight: 500">
+                                            <ul>
+                                                <li>Added New Blueprint Node</li>
+                                                <li>Get True North Device Orientation</li>
+                                                <li>Makes use of both ACCELEROMETER and MAGNETIC_FIELD sensors</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="padding: 10px"></div>
+                    <div class="news-card expanded">
+                        <div class="news-container">
+                            <div class="news-group-item">
+                                <div class="row">
+                                    <div class="col-auto" style="padding-right: 0">
+                                        <img class="news-badge" src="../../../images/AndroidSensors/Android_Sensors_Plugin_Logo.png">
+                                    </div>
+                                    <div class="col-9" style="padding-left: 10px">
                                         <div class="news-title">Initial Release</div>
                                         <div class="news-sub-title">2023-09-28</div>
                                     </div>
