--- a/plugins/android-native/notifications/importing_images.html
+++ b/plugins/android-native/notifications/importing_images.html
@@ -46,7 +46,7 @@
                             <a class="nav-link disabled">Developer Guidelines</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="overview.html">
+                            <a class="nav-link inactive" href="overview.html">
                                 Overview
                             </a>
                         </li>
@@ -81,7 +81,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="importing_images.html">
+                            <a class="nav-link active" href="importing_images.html">
                                 Importing Images
                             </a>
                         </li>
@@ -125,96 +125,43 @@
             </nav>
 
             <main role="main" class="col-md-9 ml-sm-auto col-lg-7 px-4">
-                <div class="container border-bottom"
-                    style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h2 text-white-shadow">Android Notifications Overview</h1>
+                <div class="container border-bottom" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
+                    <h1 class="h2 text-white-shadow">Getting Started</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
-                        <p class="content">
-                            <b>Android Native: Notifications</b>
-                        </p>
-                        <p class="content">
-                            Android notifications are crucial means of communication, appearing outside of your application's UI.
-                            They serve various purposes, from reminding users of important events to enticing them to re-engage with your application. 
-                        </p>
-                        <p class="content">
-                            With this Unreal Engine plugin, you gain the power to craft custom notifications, leveraging features like direct texture integration for images within blueprints.
-                            Once created, these notifications can be promptly displayed or scheduled for future delivery.
-                        </p>
-                        <p class="content" style="margin-bottom: 0rem;">
-                            Enhance user engagement and retention in your Unreal Engine Android mobile application today by integrating notifications seamlessly.
-                        </p>
+                        <ol class="list-group list-group-flush">
+                            <li class="list-group-item">
+                                Purchase the Plugin
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                Purchase the plugin on the <a href="">Official Unreal Engine Marketplace</a> (disabled untill go live).
+                            </p>
+                            <li class="list-group-item">
+                                Install the Plugin
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                In the Epic Games Launcher, the plugin will appear in your Library.</br>
+                                Go to the Library tab and find the plugin and add it to the engine.
+                            </p>
+                            <li class="list-group-item">
+                                Enable Play Base Services Plugin
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                In Unreal Engine, the plugin will be available in the plugins section.</br>
+                                Go to <span style="font-weight: 500">Settings</span> -> <span
+                                    style="font-weight: 500">Plugins</span> -> Search for "<span
+                                    style="font-weight: 500">Advanced Notifications</span>" and ensure it is enabled.
+                            </p>
+                            <div class="container" style="margin-left: 0px; padding-left: 0px; padding-bottom: 10px;">
+                                <div style="display: flex; justify-content: center; align-items: center;">
+                                    <img style="max-width: 80%" src="../../../images/PlayBaseServices/PlayBaseServices_Plugin_Enabled.png">
+                                </div>
+                            </div>
+                        </ol>
                     </div>
-                    <div class="info" style="margin-top: 20px">
-                        <p class="content">
-                            <b>The Unreal Engine Plugin</b>
-                        </p>
-                        <p class="content">
-                            The Unreal Engine plugin for Android Notifications SDK API is an easy to use tool which makes use of a builder sender style.
-                            The entire plugin is entirely exposed to blueprints allowing you to build your notifications up as much as you want in advance and send them when the time is right.
-                        </p>
-                        <p class="content">
-                            Some key features include:
-                        </p>
-                        <table class="two-column-table" style="margin-bottom: 10px">
-                            <tr>
-                                <td class="blue-diamond">Direct Image Input in Blueprint Nodes</td>
-                            </tr>
-                            <tr>
-                                <td class="blue-diamond">Notification Scheduling</td>
-                            </tr>
-                            <tr>
-                                <td class="blue-diamond">Notification Permission Management</td>
-                            </tr>
-                            <tr>
-                                <td class="blue-diamond">Notification Channel Management</td>
-                            </tr>
-                        </table>
-                    </div>
-                    
-                    <div class="container"
-                        style="margin-left: 0px; padding-left: 0px; margin-bottom: 5px; margin-top: 40px; margin-right: 20px; border-top-left-radius: 20px;">
-                        <h1 class="list-group-item">Notification Permissions</h1>
-                    </div>
-                    <div style="display: flex; justify-content: center; align-items: center; padding-top: 10px;">
-                        <img src="../../../images/AndroidNotifications/Notification_Permission_All_BP_Nodes.png" style="width: 50%">
-                    </div>
-
-                    <div class="container"
-                        style="margin-left: 0px; padding-left: 0px; margin-bottom: 5px; margin-top: 40px; margin-right: 20px; border-top-left-radius: 20px;">
-                        <h1 class="list-group-item">Notification Channels</h1>
-                    </div>
-                    <div style="display: flex; justify-content: center; align-items: center; padding-top: 10px;">
-                        <img src="../../../images/AndroidNotifications/Notification_Channels_All_BP_Nodes.png" style="width: 65%">
-                    </div>
-
-                    <div class="container"
-                        style="margin-left: 0px; padding-left: 0px; margin-bottom: 5px; margin-top: 40px; margin-right: 20px; border-top-left-radius: 20px;">
-                        <h1 class="list-group-item">Notification Channel Groups</h1>
-                    </div>
-                    <div style="display: flex; justify-content: center; align-items: center; padding-top: 10px;">
-                        <img src="../../../images/AndroidNotifications/Notification_ChannelGroup_All_BP_Nodes.png" style="width: 70%">
-                    </div>
-
-                    <div class="container"
-                        style="margin-left: 0px; padding-left: 0px; margin-bottom: 5px; margin-top: 40px; margin-right: 20px; border-top-left-radius: 20px;">
-                        <h1 class="list-group-item">Notification Building</h1>
-                    </div>
-                    <div style="display: flex; justify-content: center; align-items: center; padding-top: 10px;">
-                        <img src="../../../images/AndroidNotifications/Notification_Building_All_BP_Nodes.png" style="width: 100%">
-                    </div>
-
-                    <div class="container"
-                        style="margin-left: 0px; padding-left: 0px; margin-bottom: 5px; margin-top: 40px; margin-right: 20px; border-top-left-radius: 20px;">
-                        <h1 class="list-group-item">Notifying</h1>
-                    </div>
-                    <div style="display: flex; justify-content: center; align-items: center; padding-top: 10px;">
-                        <img src="../../../images/AndroidNotifications/Notification_Notifying_All_BP_Nodes.png" style="width: 50%">
-                    </div>
-                    
-                    <div style="margin-bottom: 250px">
-                    </div>
+                </div>
+                <div style="margin-bottom: 150px">
                 </div>
             </main>
             <div class="col-md-3 d-none d-md-block">
